# alkobot

./: CMakeLists.txt  Database.cpp  Database.h  FishachBot.cpp  FishachBot.h  main.cpp
api/Ban/: Ban.cpp  Ban.h
api/Beer/: Beer.cpp  Beer.h
api/Fish/: Fish.cpp  Fish.h
utils/: Utils.cpp  Utils.h
